2009-03-14  Les Harris  <lharris@gnome.org>

	* src/mud-telnet-zmp.c (mud_telnet_zmp_handle_sub_neg),
	(ZMP_check): Improved creation of argv for ZMP commands. Added check
	for malformed ZMP_check command to prevent crash.
	* src/mud-telnet.c (mud_telnet_process): Moved MCCP related code into
	an ENABlE_MCCP block
	* src/mud-telnet.h: Increased subneg buffer size to 16k

2009-03-13  Les Harris  <lharris@gnome.org>

	* src/mud-telnet.c: Poll for mccp-new in main processing loop. This
	prevents MCCP corruption when it is disabled and then reenabled.

2009-03-13  Les Harris  <lharris@gnome.org>

	* AUTHORS: Added self.
	* configure.ac: Removed some stale checks.
	* src/Makefile.am: Removed mud-telnet-handlers.[ch]. Added new files.
	* src/mud-telnet-handlers.[ch]: Deleted files.
	* src/gnome-mud.c (main): Use g_get_user_data_dir and G_DIR_SEPARATOR
	to locate the config directory.
	* src/mud-connection-view.[ch]: Updated GObject Code. Added numerous
	parameters and removed accessor functions when they were made
	redundant.
	* src/mud-connections.[ch]: Updated calls to instantiate
	MudConnectionView. Fixed input history bug, should now behave
	properly.
	* src/mud-parse-alias.[ch]:
	* src/mud-parse-base.[ch]:
	* src/mud-regex.[ch]:
	* src/mud-parse-trigger.[ch]: Updated GObject Code.  Simplified API
	for eventual MudRegex removal.
	* src/mud-profile.[ch] (mud_profile_new): Changed type to
	MUD_TYPE_PROFILE.
	* src/mud-telnet.[ch]: Updated GObject code.  Rearchitected telnet
	handler code.  Now all handlers implement the MudTelnetHandler
	interface. All handlers are now stored in a hashtable keyed off their
	option number.  The main win is that now TelnetHandlers can store
	their own state without cluttering up MudTelnet.
	* src/mud-telnet-handler-interface.[ch]: New interface base class for
	telnet handlers.
	* src/mud-telnet-charset.[ch]:
	* src/mud-telnet-echo.[ch]:
	* src/mud-telnet-eor.[ch]:
	* src/mud-telnet-mccp.[ch]:
	* src/mud-telnet-msp.[ch]: